feat: add logic for filtering videos